Styles touchup. Except, TODO: I don't know how to make col() available here, which I figure, would be needed for setting the column widths properly.

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -97,7 +97,7 @@
 
               {{#waitinglist}}
               {{#items}}
-              <h4 style="font-size: 1em;">{{title}}</h4>
+              <h4>{{title}}</h4>
               {{#group}}
               <div><a href="#" class="approvaltab" data-approvaltab="{{id}}">
                 {{title}} ({{count}})
