--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -6,3 +6,6 @@ a#global-logo{padding-left:35px;}
 #recent-quips-add-form textarea{width:99%;}
 .contentWrapper section.main{padding-top:0;}.contentWrapper section.main form.addTag{width:20em;}
 #chatter-panel-text{width:95%;}
+#radar-panel .approvalpanel1{}
+#radar-panel .approvalpanel2{}
+#radar-panel h4{font-size:1em;}
