--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -37,3 +37,17 @@ a#global-logo {
 }
 
 
+#radar-panel {
+    .approvalpanel1 {
+        /* XXX width 1/3 */
+    }
+    .approvalpanel2 {
+        /* XXX width 2/3 */
+    }
+    h4 {
+        font-size: 1em;
+    }
+    
+}
+
+
