--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -50,7 +50,16 @@ a#global-logo {
         /*.col(6);*/
     }
     h4 {
-        font-size: 1em;
+        font-size: 105%;
+    }
+    .actionlinks {
+        font-size: 75%;
+        a {
+            /* Bring back the link color...
+             * but actually, it should rather not be overritten
+             * unconditionally from original! */
+            color: #3D8FB3;
+        }
     }
     
 }
