--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -11,4 +11,5 @@ a#global-logo{padding-left:35px;}
 #chatter-panel-text{width:95%;}
 #radar-panel .approvalpanel1{}
 #radar-panel .approvalpanel2{}
-#radar-panel h4{font-size:1em;}
+#radar-panel h4{font-size:105%;}
+#radar-panel .actionlinks{font-size:75%;}#radar-panel .actionlinks a{color:#3D8FB3;}
