radar: globalize the dates.

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -45,7 +45,7 @@
                             </div>
                         </a>
                         <div class="pushDownList-helper">
-                            <time datetime="{{modified}}">{{modified_readable}}</time>
+                            <time class="globalize-full-date" datetime="{{modified}}">{{modified}}</time>
                         </div>
                     </li>
                 {{/contexts}}
