--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -12,4 +12,5 @@ a#global-logo{padding-left:35px;}
 #radar-panel .approvalpanel1{}
 #radar-panel .approvalpanel2{}
 #radar-panel h4{font-size:105%;}
+#radar-panel a.community-link{color:#3D8FB3;}
 #radar-panel .actionlinks{font-size:75%;}#radar-panel .actionlinks a{color:#3D8FB3;}
