--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -40,12 +40,12 @@
                         <a href="{{url}}">
                             <h4 class="pushDownList-title">{{title}}</h4>
                             <div class="pushDownList-info">
-                                <cite>{{type}} in 
+                                <cite>{{type}}{{#community}} in 
                                 <!--XXX a inside an a? ... -->
-                                    <a class="community-link" href="{{community_url}}">
-                                        {{community_title}}
+                                    <a class="community-link" href="{{url}}">
+                                        {{title}}
                                     </a>
-                                </cite>
+                                {{/community}}</cite>
                             </div>
                         </a>
                         <div class="pushDownList-helper">
