Include timeago globally, deprecating its macro. If timeago-date class is used then the transforms are automatic without the macro. Change the radar basic tab to show time-ago dates.

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -48,7 +48,7 @@
                             </div>
                         </a>
                         <div class="pushDownList-helper">
-                            <time class="globalize-long-date" datetime="{{modified}}">{{modified}}</time>
+                            <time class="timeago-date" datetime="{{modified}}">{{modified}}</time>
                         </div>
                     </li>
                 {{/contexts}}
