--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -56,6 +56,12 @@ a#global-logo {
     }
     .homepanel2 {
         .col(4);
+        .timeline {
+            float: right;
+            font-family: Verdana,sans-serif;
+            font-size: 0.75em;
+            margin: 4px 0 0 4px;
+        }
     }
     .approvalpanel1 {
         /*.col(4.5);*/
