--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -10,7 +10,7 @@ a#global-logo{padding-left:35px;}
 .contentWrapper section.main{padding-top:0;}.contentWrapper section.main form.addTag{width:20em;}
 #chatter-panel-text{width:95%;}
 #radar-panel .homepanel1{display:inline;float:left;width:39.58333333333333%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
-#radar-panel .homepanel2{display:inline;float:left;width:31.25%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
+#radar-panel .homepanel2{display:inline;float:left;width:31.25%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}#radar-panel .homepanel2 .timeline{float:right;font-family:Verdana,sans-serif;font-size:0.75em;margin:4px 0 0 4px;}
 #radar-panel .approvalpanel1{}
 #radar-panel .approvalpanel2{}
 #radar-panel a.community-link{color:#3D8FB3;}
