--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -56,12 +56,6 @@ a#global-logo {
     }
     .homepanel2 {
         .col(4);
-        .timeline {
-            float: right;
-            font-family: Verdana,sans-serif;
-            font-size: 0.75em;
-            margin: 4px 0 0 4px;
-        }
     }
     .approvalpanel1 {
         /*.col(4.5);*/
@@ -69,8 +63,12 @@ a#global-logo {
     .approvalpanel2 {
         /*.col(6);*/
     }
-    a.community-link {
-        .fixmylinks;
+    .pushDownList-info {
+        overflow: hidden;
+        a.community-link {
+            .fixmylinks;
+            white-space: nowrap;
+        }
     }
     ul.actionlinks {
         font-size: 0.75em;
@@ -95,6 +93,12 @@ a#global-logo {
     }
     a.selected {
         color: #fff;
+    }
+    .timeline {
+        float: right;
+        font-family: Verdana,sans-serif;
+        font-size: 0.75em;
+        margin: 4px 0 0 4px;
     }
 }
 
