Bit better formatting on blog comments.

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -102,4 +102,30 @@ a#global-logo {
     }
 }
 
+.blogComment {
+    background-color: #C8B6A1;
+    border: 1px solid #CECECE;
+    margin: 0em 0em 1em;
+    padding: 1em;
+    min-height: 100px;
+    height:auto !important;
+    height: 100px;
+    .commentManagement {
+        float: right;
+        margin-top: -0.5em;
+    }
+    .portrait {
+        float: left;
+    }
+    .commentText {
+        margin-top: 4em;
+        margin-bottom: 2em;
+        margin-left: 110px;
+    }
+    .kbyline {  /* the comment date */
+        float: right;
+        font-weight: normal;
+    }
+}
+
 
