--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -18,3 +18,7 @@ a#global-logo{padding-left:35px;}
 #radar-panel ul.actionlinks>li:first-child{border-left:none;padding-left:0;}
 #radar-panel a.selected{color:#fff;}
 #radar-panel .timeline{float:right;font-family:Verdana,sans-serif;font-size:0.75em;margin:4px 0 0 4px;}
+.blogComment{background-color:#C8B6A1;border:1px solid #CECECE;margin:0em 0em 1em;padding:1em;min-height:100px;height:auto !important;height:100px;}.blogComment .commentManagement{float:right;margin-top:-0.5em;}
+.blogComment .portrait{float:left;}
+.blogComment .commentText{margin-top:4em;margin-bottom:2em;margin-left:110px;}
+.blogComment .kbyline{float:right;font-weight:normal;}
