--- a/karl/views/static/tinymce/3.3.9.2/plugins/paste/tests/test.html
+++ b/karl/views/static/tinymce/3.3.9.2/plugins/paste/tests/test.html
@@ -3,20 +3,23 @@
   <head>
       <title>tinymce paste plugin tests</title>
 
-      <!-- Load jQuery -->
-      <script src="http://www.google.com/jsapi"
-	      type="text/javascript"></script>
-      <script type="text/javascript">
-          google.load("jquery", "1.4.4");
-      </script>
+      <!-- Workaround prelude to make jquery animations work with sinon.clock -->
+      <!-- (Must come before jquery) -->
+      <script src="../../../../../testlib/jquery-animation-workaround.js" type="text/javascript"></script>
 
-      <!-- Test suite -->
-      <script type="text/javascript" src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js">//</script>
-      <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" />
-      <script type="text/javascript" src="http://soc.googlecode.com/hg/app/json.min/json2.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts_pre.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts.js">//</script>
-      <script type="text/javascript" src="http://github.com/eduardolundgren/jquery-simulate/raw/master/jquery.simulate.js">//</script>
+      <!-- Load jQuery and the UI widget factory -->
+      <script src="../../../../../testlib/jquery-1.6.2.min.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/jquery.ui.widget.js" type="text/javascript"></script>
+
+      <!-- Qunit and other testing goodies -->
+      <script src="../../../../../testlib/qunit-git.js" type="text/javascript"></script>
+      <link href="../../../../../testlib/qunit-git.css" type="text/css" rel="stylesheet" />
+      <script src="../../../../../testlib/sinon-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/sinon-ie-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/jquery.simulate.js" type="text/javascript"></script>
+      <!-- This test uses some stuff we don't use in new tests -->
+      <script src="../../../../../testlib/mocktimeouts_pre.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/mocktimeouts.js" type="text/javascript"></script>
 
       <!-- The widget plugin JS and CSS -->
       <script src="../../../tiny_mce_src.js" type="text/javascript">//</script>
