--- a/karl/views/static/tinymce/3.3.9.2/plugins/imagedrawer/tests/test.html
+++ b/karl/views/static/tinymce/3.3.9.2/plugins/imagedrawer/tests/test.html
@@ -3,31 +3,32 @@
   <head>
       <title>tinymce imagedrawer plugin tests</title>
 
-      <!-- Load jQuery and jQuery UI, both JS and CSS -->
-      <script src="http://www.google.com/jsapi"
-	      type="text/javascript"></script>
-      <script type="text/javascript">
-          google.load("jquery", "1.4.4");
-	    //google.load("jqueryui", "1.8.7");
-      </script>
-      <script src="https://github.com/reebalazs/bottlecap/raw/master/sl/jquery-ui-1.9m3.custom.min.js" type="text/javascript"></script>
-      <script src="http://jqueryui.com/themeroller/themeswitchertool/" type="text/javascript"></script>
+      <!-- Workaround prelude to make jquery animations work with sinon.clock -->
+      <!-- (Must come before jquery) -->
+      <script src="../../../../../testlib/jquery-animation-workaround.js" type="text/javascript"></script>
 
-      <!--link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/themes/smoothness/jquery-ui.css" /-->
-      <link rel="stylesheet" href="https://github.com/jquery/jquery-ui/raw/master/themes/base/jquery.ui.all.css" />
+      <!-- Load jQuery and JQuery-UI -->
+      <script src="../../../../../testlib/jquery-1.6.2-jquery-ui-1.9m5.min.js" type="text/javascript"></script>
+      <link href="../../../../../testlib/jquery-ui-1.9m5-unthemed.min.css" type="text/css" rel="stylesheet" />
 
-      <!-- Test suite -->
-      <script type="text/javascript" src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js">//</script>
-      <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" />
-      <script type="text/javascript" src="http://soc.googlecode.com/hg/app/json.min/json2.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts_pre.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts.js">//</script>
-      <script type="text/javascript" src="http://github.com/eduardolundgren/jquery-simulate/raw/master/jquery.simulate.js">//</script>
-      <!-- Implement a head-less server -->
-      <script type="text/javascript" src="http://soc.googlecode.com/hg/app/json.min/json2.js">//</script>
-      <script src="http://github.com/philikon/MockHttpRequest/raw/master/lib/mock.js" type="text/javascript">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/moremockhttp.js"></script>
+      <!-- Qunit and other testing goodies -->
+      <script src="../../../../../testlib/qunit-git.js" type="text/javascript"></script>
+      <link href="../../../../../testlib/qunit-git.css" type="text/css" rel="stylesheet" />
+      <script src="../../../../../testlib/sinon-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/sinon-ie-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/jquery.simulate.js" type="text/javascript"></script>
+      <!-- This test uses some stuff we don't use in new tests -->
+      <script src="../../../../../testlib/mock.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/moremockhttp.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/mocktimeouts_pre.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/mocktimeouts.js" type="text/javascript"></script>
 
+      <!-- The widget plugin JS and CSS -->
+      <script src="../../../tiny_mce_src.js" type="text/javascript">//</script>
+      <script src="../../../jquery.tinysafe.js" type="text/javascript">//</script>
+      <!-- static js loading  -->
+      <script src="../../../themes/advanced/editor_template_src.js" type="text/javascript"></script>
+      <script src="../editor_plugin_src.js" type="text/javascript"></script>
 
       <!-- Dependencies for the widget plugin -->
       <script src="../../../../../karl-plugins/karl-buttonset/karl.buttonset.js" type="text/javascript"></script>
