--- a/karl/views/static/tinymce/3.3.9.2/plugins/wicked/tests/test.html
+++ b/karl/views/static/tinymce/3.3.9.2/plugins/wicked/tests/test.html
@@ -3,20 +3,20 @@
   <head>
       <title>tinymce wicked plugin tests</title>
 
-      <!-- Load jQuery -->
-      <script src="http://www.google.com/jsapi"
-	      type="text/javascript"></script>
-      <script type="text/javascript">
-          google.load("jquery", "1.4.4");
-      </script>
 
-      <!-- Test suite -->
-      <script type="text/javascript" src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js">//</script>
-      <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" />
-      <script type="text/javascript" src="http://soc.googlecode.com/hg/app/json.min/json2.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts_pre.js">//</script>
-      <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/mocktimeouts.js">//</script>
-      <script type="text/javascript" src="http://github.com/eduardolundgren/jquery-simulate/raw/master/jquery.simulate.js">//</script>
+      <!-- Workaround prelude to make jquery animations work with sinon.clock -->
+      <!-- (Must come before jquery) -->
+      <script src="../../../../../testlib/jquery-animation-workaround.js" type="text/javascript"></script>
+
+      <!-- Load jQuery -->
+      <script src="../../../../../testlib/jquery-1.6.2.min.js" type="text/javascript"></script>
+
+      <!-- Qunit and other testing goodies -->
+      <script src="../../../../../testlib/qunit-git.js" type="text/javascript"></script>
+      <link href="../../../../../testlib/qunit-git.css" type="text/css" rel="stylesheet" />
+      <script src="../../../../../testlib/sinon-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/sinon-ie-1.3.1.js" type="text/javascript"></script>
+      <script src="../../../../../testlib/jquery.simulate.js" type="text/javascript"></script>
 
       <!-- The widget plugin JS and CSS -->
       <script src="../../../tiny_mce_src.js" type="text/javascript">//</script>
@@ -40,30 +40,6 @@
     <ol id="qunit-tests"></ol>  
 
     <div id="main">
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui tellus,
-        bibendum id tincidunt quis, adipiscing in ipsum. Praesent eu leo nisl.
-        Curabitur accumsan placerat mauris, vulputate tincidunt nunc porttitor
-        suscipit. Suspendisse aliquet velit vitae lectus eleifend non dapibus massa
-        congue. Morbi eu sem nisi. Integer arcu odio, suscipit eu ultricies eget,
-        aliquam eget ligula. Fusce at tortor a ipsum pellentesque ultrices nec nec
-        augue.
-      </p>
-
-      <textarea name="text" rows="1" cols="40" class="mceEditor">Pellentesque in sagittis ante. Ut porttitor
-sollicitudin fringilla. Proin sed eros tortor, nec luctus risus! Curabitur
-adipiscing ullamcorper convallis. Class aptent taciti sociosqu ad litora
-torquent per conubia nostra, per inceptos himenaeos.
-      </textarea>
-
-      <p>
-        Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
-        Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
-        Suspendisse bibendum dui ut diam aliquet non iaculis ante faucibus.
-        Curabitur sit amet orci nulla!
-      </p>
-
     </div>
 
   </body>
