Fix some more dormant qunit test

--- a/karl/views/static/karl-plugins/karl-contentfeeds/test.html
+++ b/karl/views/static/karl-plugins/karl-contentfeeds/test.html
@@ -20,9 +20,9 @@
       <!-- This test uses some stuff we don't use in new tests -->
       <script src="../../testlib/mock.js" type="text/javascript"></script>
       <script src="../../testlib/moremockhttp.js" type="text/javascript"></script>
-    
-
-      <!-- The widget plugin JS and CSS -->
+      <script src="../../testlib/mocktimeouts_pre.js" type="text/javascript"></script>
+      <script src="../../testlib/mocktimeouts.js" type="text/javascript"></script>
+  
       <script src="karl.contentfeeds.js" type="text/javascript" ></script>
       <link rel="stylesheet" href="karl.contentfeeds.css"/>
       <!-- Other dependencies (XXX transitionally, we can refer karl code
