--- a/karl/views/static/ux2/karl.wikitoc.less
+++ b/karl/views/static/ux2/karl.wikitoc.less
@@ -124,16 +124,6 @@
         width: 100%;
         height: 500px;
     }
-    .karl-wikitoc-footer {
-        width: 100%;
-        height: 36px;
-        border: 0 none;
-    }
-
-    .karl-wikitoc-button-inspector {
-        float: right;
-        margin: 4px;
-    }
 
     /* inspector panel */
 
@@ -149,27 +139,47 @@
         color: #222222;
         background-color: #d3d3d3; 
         font-weight: bold;
-    }
-    .karl-wikitoc-inspector fieldset {
-        border: 2px groove #f0f0f0;
-    }
-    .karl-wikitoc-inspector fieldset > div {
-        padding: 8px;
-    }
-    .karl-wikitoc-inspector legend {
-        color: #222222;
-        margin-left: 11px;
-    }
 
-    .karl-wikitoc-inspector fieldset p {
-        margin: 0 0 10px 2px;
-        font-size: 90%;
-        font-weight: normal;
-        font-style: italic;
-    }
-    .karl-wikitoc-inspector fieldset label {
-        font-size: 90%;
-        font-weight: bold;
+        font-size: 11px;
+        line-height: 11px;
+
+        fieldset {
+            border: 2px groove #f0f0f0;
+            margin: 0;
+            
+            &.karl-wikitoc-grouping,
+            &.karl-wikitoc-columnselectors {
+                margin-top: 20px;
+            }
+
+            legend {
+                color: #222222;
+                padding: 0 2px;
+                margin: 0 0 0 11px; 
+            }
+
+            > div {
+                padding: 8px;
+            }
+
+            p {
+                margin: 0 0 10px 2px;
+                font-weight: normal;
+                font-style: italic;
+            }
+
+            label {
+                font-weight: bold;
+                display: inline-block;
+            }
+
+            input[type="checkbox"] {
+                margin: 3px;
+                border: 2px;
+            }
+
+        }
+
     }
 
     /* inspector panel fieldsets spacing */
@@ -182,18 +192,13 @@
         padding-top: 40px;
     }
 
-    fieldset.karl-wikitoc-grouping {
-        margin-top: 40px;
-    }
-
-    fieldset.karl-wikitoc-columnselectors {
-        margin-top: 40px;
-    }
+    
 
 
     .karl-wikitoc-icon-search {
         float: left;
         position: relative;
+        margin-top: 4px;
     }
     .karl-wikitoc-input-livesearch {
         width: 122px;
@@ -201,41 +206,15 @@
         padding-left: 16px;
     }
     
-    /*
-    .karl-wikitoc-grid .grid-canvas {
-        font-size: 0.9em;
-    }
-    */
-
     .karl-wikitoc-items  {
         padding: 10px;
         display: inline-block;
         float: left;
     }
 
-    /*.karl-wikitoc-grid .grid-canvas .odd div {
-        background-color: #F0F2F4;
-    }*/
-
-    /*.karl-wikitoc-grid-row-hover .slick-cell {
-        background: url("images/e6e6e6_40x100_textures_02_glass_75.png") repeat-x scroll 0 50% #E6E6E6 !important;
-    }*/
-
-    /*
-    .karl-wikitoc-groupheader {
-        font-weight: bold;
-    }
-    */
-
 
     /* slickgrid cell, group and expansion styles */
 
-    /*
-    .slick-cell {
-        padding-left: 4px;
-        padding-right: 4px;
-    }
-    */
 
     .slick-group .slick-cell {
         background: #d3d3d3 !important;
@@ -258,4 +237,16 @@
 
 }
 
+
+.karl-wikitoc-footer {
+    width: 100%;
+    height: 36px;
+    border: 0 none;
+
+    .karl-wikitoc-button-inspector {
+        float: right;
+        margin: 4px;
+    }
+
+}
 
