--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -22,3 +22,7 @@ a#global-logo{padding-left:35px;}
 .save-attachments{margin-bottom:15px;}
 .save-sendalert label{text-align:left !important;}
 .save-attachments-n input {margin-left:-150px;margin-right: 40px;}
+.portrait{float: left; margin: 5px 20px 5px 0;}
+.profileDetails{float: left;}
+.profileLabel{font-weight:bold;}
+.profileBio{clear:both;}
