--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -113,11 +113,19 @@ a#global-logo {
     margin-bottom:15px;
 }
 
+.save-attachments label {
+    display:inline;
+}
+
+.adderlink {
+    margin-left:22.75%;
+}
+
 .save-sendalert label {
     text-align:left !important;
 }
 
 .save-attachments-n input {
-    margin-left:-150px;
+    margin-left:0;
     margin-right: 40px;
 }
