profile template umbrella task second checkpoint

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -56,4 +56,4 @@ a#global-logo{padding-left:35px;}
 .portrait{float: left; margin: 5px 20px 5px 0;}
 .profileDetails{float: left;}
 .profileLabel{font-weight:bold;}
-.profileBio{clear:both;}
+.profileBio{clear:both;margin-right:25px;}
