--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -129,3 +129,22 @@ a#global-logo {
     margin-left:0;
     margin-right: 40px;
 }
+
+.portrait {
+    float: left;
+    margin: 5px 20px 5px 0;
+}
+
+.profileDetails {
+    float: left;
+}
+
+.profileLabel {
+    font-weight:bold;
+}
+
+.profileBio {
+    clear:both;
+    margin-right:25px;
+}
+
