--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -111,10 +111,9 @@ a#global-logo {
 
 .save-attachments {
     margin-bottom:15px;
-}
-
-.save-attachments label {
-    display:inline;
+    label {
+        display:inline;
+    }
 }
 
 .adderlink {
