--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -12,6 +12,25 @@ a#global-logo {
     padding-left: 35px;
 }
 
+@media only screen and (min-width: 768px) {
+    input,
+    textarea,
+    select,
+    .uneditable-input,
+    .help-block {
+        width: 550px;
+    }
+    
+    .tagbox {
+        display: block;
+        width: 550px;
+    }
+    
+    #newTag {
+        width: 460px;
+    }
+}
+
 .pushdownContent {
     .avatar {
         width: 48px;
