prettified up resource delete page

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -56,3 +56,4 @@ a#global-logo{padding-left:35px;}
 .profileDetails{float:left;}
 .profileLabel{font-weight:bold;}
 .profileBio{clear:both;margin-right:25px;}
+.notification .actions{margin:1em 0 1em 2.75em;}
