add overflow menu to profile actions in ux2

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -57,3 +57,4 @@ a#global-logo{padding-left:35px;}
 .profileLabel{font-weight:bold;}
 .profileBio{clear:both;margin-right:25px;}
 .notification .actions{margin:1em 0 1em 2.75em;}
+#actions-overflow-menu{margin:0px 20px;}
