--- a/karl/views/static/ux2/karl.wikitoc.less
+++ b/karl/views/static/ux2/karl.wikitoc.less
@@ -118,6 +118,14 @@
                 .reset-columns ();
             }
            
+            .slick-sort-indicator-asc {
+                background: url("sort-asc.gif") repeat scroll 0 0 transparent;
+            }
+
+            .slick-sort-indicator-desc {
+                background: url("sort-desc.gif") repeat scroll 0 0 transparent;
+            }
+           
         }
     }
 
