--- a/karl/ux2/forms/templates/formish/field/main.html
+++ b/karl/ux2/forms/templates/formish/field/main.html
@@ -2,14 +2,19 @@
     tal:define="show_label field.widget.show_label|True;
                 show_description field.widget.show_description|True">
   <!-- field/main.html -->
-  <label tal:condition="show_label and field.widget.type != 'Hidden' and 
-                        '.' not in field.name"
-      for="${field.cssname}" 
-      tal:attributes="class field.required and 'required' and 'control-label' or 
-      'control-label'">${field.title}</label>
-  <div class="controls" tal:omit-tag="not show_label">
-  	<span tal:content="structure:field.widget()" tal:omit-tag></span>
-  	<span tal:condition="field.error" class="help-inline">${unicode(field.error)}</span>
-  	<p class="fieldHelp help-block" tal:condition="str(field.description) != '' and show_description">${field.description}</p>
-	</div>
+  <div tal:condition="field.widget.type in ('CheckedPassword',)" tal:omit-tag>
+    <span tal:content="structure:field.widget()" tal:omit-tag></span>
+  </div>
+  <div tal:condition="field.widget.type not in ('CheckedPassword',)" tal:omit-tag>
+    <label tal:condition="show_label and field.widget.type != 'Hidden' and 
+                          '.' not in field.name"
+        for="${field.cssname}" 
+        tal:attributes="class field.required and 'required' and 'control-label' or 
+        'control-label'">${field.title}</label>
+    <div class="controls" tal:omit-tag="not show_label">
+    	<span tal:content="structure:field.widget()" tal:omit-tag></span>
+    	<span tal:condition="field.error" class="help-inline">${unicode(field.error)}</span>
+    	<p class="fieldHelp help-block" tal:condition="str(field.description) != '' and  show_description">${field.description}</p>
+	 </div>
+  </div>
 </div>
