--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -157,6 +157,10 @@ a#global-logo {
     float: left;
 }
 
+.profileDetails p {
+    margin-bottom:0;
+}
+
 .profileLabel {
     font-weight:bold;
 }
