prevent radio input labels from showing up a line below the radio button

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -67,3 +67,4 @@ a#global-logo{padding-left:35px;}
 .profileBio{clear:both;margin-right:25px;}
 .notification .actions{margin:1em 0 1em 2.75em;}
 #actions-overflow-menu{margin:0;}
+.karlselectionradiofield label{display:inline;}
