fixed tag box with

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -23,11 +23,11 @@ a#global-logo {
     
     .tagbox {
         display: block;
-        width: 550px;
+        width: auto;
     }
     
     #newTag {
-        width: 460px;
+        width: auto;
     }
 }
 
