--- a/karl/ux2/forms/templates/formish/field/main.html
+++ b/karl/ux2/forms/templates/formish/field/main.html
@@ -1,4 +1,4 @@
-<div id="${field.cssname}--field" class="control-group${' required' if 'required' in field.classes else ''}"
+<div id="${field.cssname}--field" class="field control-group${' required' if 'required' in field.classes else ''}"
     tal:define="show_label field.widget.show_label|True;
                 show_description field.widget.show_description|True">
   <!-- field/main.html -->
