--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -56,7 +56,7 @@ a#global-logo{padding-left:35px;}
 #radar-panel a.selected{color:#fff;}
 #radar-panel .timeline{float:right;font-family:Verdana,sans-serif;font-size:0.75em;margin:4px 0 0 4px;}
 .column{padding:0;}
-.save-attachments{margin-bottom:15px;}.save-attachments label{display:inline;}
+.save-attachments{margin-bottom:15px;}.save-attachments label{text-align:right;display:inline;}
 .adderlink{margin-left:22.75%;}
 .save-sendalert label{text-align:left !important;}
 .save-attachments-n input{margin-left:0;margin-right:40px;}
