initial modal implementation for deactivate/reactivate users on profile view

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -78,3 +78,5 @@ a#global-logo{padding-left:35px;}
 .profilesWrapper .profileNoWrap{white-space:nowrap;}
 .profilesWrapper a.rightFloatLink{float:right;text-decoration:none;}
 .profilesWrapper .visual-clear{clear:both;}
+#deactivateModal{display:none;}
+#reactivateModal{display:none;}
