--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -1,6 +1,8 @@
 .alpha{margin-left:0;}
 .omega{margin-right:0;}
 .column-half{display:inline;float:left;width:47.91666666666667%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
+.noBullets{list-style:none;padding-left:0;margin-left:0;}.noBullets li{list-style:none;}
+.verticalCentering{position:absolute;top:0;bottom:0;margin:auto;}
 .filter.karl-wikitoc-header{margin-bottom:0;padding-bottom:0;height:0;}
 .karl-wikitoc-gridwrapper{width:100%;height:500px;position:relative;}.karl-wikitoc-gridwrapper .slick-viewport{background:#e3d2ba;}
 .karl-wikitoc-gridwrapper .grid-canvas{}.karl-wikitoc-gridwrapper .grid-canvas .slick-row{border:0 none;position:absolute;}
@@ -18,8 +20,9 @@
 .karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column.ui-state-default a:hover{color:#fff;}
 .karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column.slick-header-column-sorted{font-style:normal;color:#fff;}
 .karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column:hover{color:#fff;}
-.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-asc{background:url("sort-asc.gif") repeat scroll 0 0 transparent;}
-.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-desc{background:url("sort-desc.gif") repeat scroll 0 0 transparent;}
+.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-asc{background-image:none;display:inline-block;padding:0 1.3em 0 .7em;margin:0;position:relative;line-height:1.5em;color:#ffffff;vertical-align:middle;padding:0 0 0 10px;}.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-asc:before{border-bottom:none;border-left:0.266666667em solid transparent;border-right:0.266666667em solid transparent;border-top:0.266666667em solid #ffffff;content:"";display:block;width:0;height:0;*line-height:0;position:absolute;z-index:2;top:50%;margin-top:-0.1em;right:.266666667em;*line-height:0;}
+.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-asc:before{border-top:0;border-bottom:.266666667em solid #fff;}
+.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-desc{background-image:none;display:inline-block;padding:0 1.3em 0 .7em;margin:0;position:relative;line-height:1.5em;color:#ffffff;vertical-align:middle;padding:0 0 0 10px;}.karl-wikitoc-gridwrapper .slick-header-columns .slick-header-column .slick-sort-indicator-desc:before{border-bottom:none;border-left:0.266666667em solid transparent;border-right:0.266666667em solid transparent;border-top:0.266666667em solid #ffffff;content:"";display:block;width:0;height:0;*line-height:0;position:absolute;z-index:2;top:50%;margin-top:-0.1em;right:.266666667em;*line-height:0;}
 .karl-wikitoc-gridwrapper .karl-wikitoc-grid{width:100%;height:500px;}
 .karl-wikitoc-gridwrapper .karl-wikitoc-widthconstrainer{width:100%;height:500px;}
 .karl-wikitoc-gridwrapper .karl-wikitoc-inspector{width:0px;height:500px;position:absolute;top:0;right:0;z-index:1111;overflow:hidden;color:#222222;background-color:#d3d3d3;font-weight:bold;font-size:11px;line-height:11px;}.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset{border:2px groove #f0f0f0;margin:0;}.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset.karl-wikitoc-grouping,.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset.karl-wikitoc-columnselectors{margin-top:20px;}
