--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -81,3 +81,6 @@ a#global-logo{padding-left:35px;}
 .profilesWrapper .profileNoWrap{white-space:nowrap;}
 .profilesWrapper a.rightFloatLink{float:right;text-decoration:none;}
 .profilesWrapper .visual-clear{clear:both;}
+#deactivateModal{display:none;}
+#reactivateModal{display:none;}
+
