renamed style to section-submenu and fixed markup

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -61,7 +61,7 @@ a#global-logo {
     }
 } 
 
-.contentbar-wrapper {
+.section-submenu {
     font-family: @fancyFont;
     font-size: 0.75em;
     padding: 0;
