--- a/karl/views/static/ux2/css/ie.less
+++ b/karl/views/static/ux2/css/ie.less
@@ -83,6 +83,9 @@ form.addTag {
     behavior: url(PIE.htc);
   }
 }
+.nav-tabs > li > a, .nav-pills > li > a {
+  behavior: url(PIE.htc);
+}
 /* MAIN */
 .quickpanelToggle(@textColor:#fff) {
     behavior: url(PIE.htc);
